# prisma-talent-app

./: .gitignore  ADMIN_LOGIN_VERIFICATION.md  ADMIN_SETUP_GUIDE.md  ADMIN_USER_GUIDE.md  ARCHITECTURE_DECISION.md  BLOCKERS_RESOLVED.md  BROWSER_CONSOLE_TEST.js  CLEANUP_COMPLETE.md  CLIENT_AUTH_TESTING_GUIDE.md  CRITICAL_BUGS_FIX_PLAN.md  CRITICAL_BUGS_RESOLVED.md  DATABASE_ARCHITECTURE_MAP.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_READINESS_REPORT.md  DEPLOYMENT_CHECKLIST.md  EDGE_FUNCTION_DEPLOYMENT.md  ENV_FILES_GUIDE.md  HONEST_ARCHITECTURE_ASSESSMENT.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_4_IMPLEMENTATION_GUIDE.md  PRODUCTION_BLOCKERS_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPLEMENTATION_CHECKLIST.md  PRODUCTION_QUICK_START.md  PRODUCTION_READINESS_QA.md  QA_FINDINGS_REPORT.md  README.md  ROUTES_REFERENCE.md  RUN_THIS_SQL.md  SETUP_STORAGE_BUCKETS.md  STORAGE_POLICIES_COMPLETE.md  TECHNICAL_READINESS_VALIDATION.md  TEST_ADMIN_IN_CONSOLE.md  THE_REAL_ARCHITECTURE.md  WORKFLOW_IMPLEMENTATION_COMPLETE.md  WORKFLOW_TESTING_REPORT.md  vercel.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  render.yaml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  clients.py  emails.py  enrollment.py  leads.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: enrollment.py  lead.py
backend/app/services/: email_service.py  email_templates.py  email_worker.py  enrollment_service.py  lead_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_leads_api.py
(+200 files in other folders)
